After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 682298 - Don't fail for EPERM when hardlinking
Don't fail for EPERM when hardlinking
Status: RESOLVED FIXED
Product: ostree
Classification: Infrastructure
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: OSTree maintainer(s)
OSTree maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2012-08-20 20:34 UTC by Giovanni Campagna
Modified: 2012-08-20 21:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Don't fail for EPERM when hardlinking (1.51 KB, patch)
2012-08-20 20:34 UTC, Giovanni Campagna
committed Details | Review

Description Giovanni Campagna 2012-08-20 20:34:32 UTC
As the manual page doesn't say, but the in-code kernel documentation
shows, hardlinking for normal users can fail for a variety of
reasons (including very common situations such as non regular file
or non writable file), if the owner of the file does not match
the user linking (e.g. when checking out a shadow repo with a root-
owned master).
If that happens, fail back silently to copying instead of aborting
the whole operation.
Comment 1 Giovanni Campagna 2012-08-20 20:34:36 UTC
Created attachment 221898 [details] [review]
Don't fail for EPERM when hardlinking
Comment 2 Colin Walters 2012-08-20 20:50:21 UTC
Review of attachment 221898 [details] [review]:

Ah, yes; makes sense.  You can tell I haven't done the shadow-repo import in a while...been doing whole-system builds locally.
Comment 3 Giovanni Campagna 2012-08-20 21:03:04 UTC
Attachment 221898 [details] pushed as 1057f82 - Don't fail for EPERM when hardlinking